Updated externals service and changing to DDD